<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Route My Way</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_today">Today\'s stats</string>
    <string name="average_speed_text">Average speed</string>
    <string name="more_info">MORE INFO</string>
    <string name="current_pos">Current position</string>
    <string name="most_active_hour">Most active hour</string>
    <string name="title_activity_speed_info">Speed statistics</string>
    <string name="best_speed">Highest speed</string>
    <string name="lowest_speed">Lowest speed</string>
    <string name="most_active_day">Most active day</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
		completions."
	</string>
    <string name="server_client_id" tools:ignore="TypographyDashes">1079439277366-1h6iqgbsbarooaduafnf8pf5gf82t7h0.apps.googleusercontent.com</string>
    <string name="preference_file_key">tm.itec.routemyway.PREFERENCES</string>
    <string name="profile">Profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="feedback">Send us feedback</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign out</string>
    <string name="current_speed">Current speed</string>
</resources>
