<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tm.itec.routemyway.TodayActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_pos"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/today_stat_title_size"
                        android:textStyle="bold"/>

                    <fragment
                        android:id="@+id/map"
                        android:name="tm.itec.routemyway.RouteMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        tools:context="tm.itec.routemyway.MapsActivity"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/today_divider_height"
                        android:background="@color/dividerColor"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/btnPosInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/more_info"
                            android:textColor="@color/colorAccent"
                            android:textSize="18sp"/>
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/today_card_space">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <ImageView
                            android:id="@+id/speedIconAvg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/today_stat_icon_margin"
                            android:layout_marginRight="@dimen/today_stat_icon_margin"
                            android:contentDescription="@string/average_speed"
                            android:src="@drawable/speed_meter"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/dummyText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/average_speed_text"
                                android:textColor="@color/colorPrimary"
                                android:textSize="@dimen/today_stat_title_size"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/speed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="4km/h"
                                android:textColor="@color/colorPrimary"
                                android:textSize="@dimen/today_stat_text_size"/>
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/today_divider_height"
                        android:background="@color/dividerColor"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/btnSpeedInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/more_info"
                            android:textColor="@color/colorAccent"
                            android:textSize="18sp"/>
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/today_card_space">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <ImageView
                            android:id="@+id/clock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/today_stat_icon_margin"
                            android:layout_marginEnd="@dimen/today_stat_icon_margin"
                            android:contentDescription="@string/average_speed"
                            android:src="@drawable/clock"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/activeHour"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/most_active_hour"
                                android:textColor="@color/colorPrimary"
                                android:textSize="@dimen/today_stat_title_size"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/hour"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="11am"
                                android:textColor="@color/colorPrimary"
                                android:textSize="@dimen/today_stat_text_size"/>
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/today_divider_height"
                        android:background="@color/dividerColor"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/btnHourInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/more_info"
                            android:textColor="@color/colorAccent"
                            android:textSize="18sp"/>
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

</LinearLayout>
